@@ -66,6 +66,8 @@ CHANGES WITH 256-rc1:
           'D' stanzas. For example, with the combination of 'R /foo' and 'x
           /foo/bar', /foo/bar will now be excluded from removal.
 
+        * systemd.crash_reboot is deprecated in favor of systemd.crash_action=.
+
         General Changes and New Features:
 
         * Various programs will now attempt to load the main configuration file
@@ -250,6 +252,10 @@ CHANGES WITH 256-rc1:
         * systemd now generates a new "taint" string "unmerged-bin" for systems
           that have /usr/bin/ and /usr/sbin/ separate. It's generally
           recommended to make the latter a symlink to the former these days.
+
+        * A new systemd.crash_action= kernel command line option has been added
+          that configures what to do after the system manager (PID 1) crashes.
+          This can also be configured through CrashAction= in systemd.conf.
 
         Journal:
 
